# Optimal-REQUEST

./: .gitignore  .gitmodules  Dockerfile  Doxyfile  LICENSE.md  Makefile  README.md  codecov.yaml  cross_file.cfg  meson.build
.github/workflows/: build_and_test_c.yml  doxygen-publish.yml  main.yml  test_matlab.yml
lib/: meson.build
matlab/: .gitignore  calculate_Phi.m  calculate_Q.m  calculate_R.m  calculate_dK.m  codegen.prj  codegen_script_c.m  codegen_script_mex.m  expm_44ss.m  generate_measurements.m  get_eigenvector.m  get_quat_from_K.m  get_util_matrices.m  main.m  measurements.csv  montecarlo.m  optimal_request.m  optimal_request_init.m  qib2Euler.m  qib2Rib.m  rodrigues.m  test_optimal_req.m
matlab/Autogenerated_Measurements/Generate/: generate_measurements.m
matlab/Autogenerated_Measurements/Parse/: Autogenerated_measurements_x.csv  Autogenerated_measurements_y.csv  Autogenerated_measurements_z.csv  drawPlane.m  iquest.m  parse_measurements.m  qib2Euler.m  qib2Rib.m  quatMul.m
matlab/misc/: calculate_kappa.m  get_expm_skew_sym.m  horner.m
matlab/other/: get_expm_skew_sym.m
matlab/scripts/utils/: angle_diff.m  qib2Rib.m
matlab/src/: calculate_R.m  generate_measurements.m  main.m  optimal_request_init.m
matlab/tests/: .gitignore  gen_meas.m  gen_meas_for_c.m  run_OR.m  run_tests.m  test_OR_rms_error.m  test_optimal_req.m
scripts/: clear_meas_data_c.sh  constants.env  docker_build_and_run_example.sh  docker_build_and_run_tests.sh  docker_container_run.sh  docker_container_stop.sh  docker_image_build.sh  docker_image_load.sh  docker_image_save.sh  docker_project_build.sh  docker_project_clang_format.sh  docker_project_clang_format_check.sh  docker_project_codecov.sh  docker_project_cppcheck.sh  docker_project_doxygen.sh  docker_project_test.sh  install_deps.sh  install_gnu_octave.sh  matlab_codegen_c.sh  matlab_codegen_mex.sh  matlab_run.sh  octave_run.sh  run-clang-format.py  test_matlab.sh
src/: .clang-format  main.c  main.h  meson.build  request.c  request.h
src/opt_req/: buildInfo.mat  codeInfo.mat  codedescriptor.dmr  get_quat_from_K_rtw.mk  meson.build  rtw_proj.tmw
src/opt_req/examples/: main.c
src/opt_req/html/: report.mldatx
test/: .gitignore  helper.c  helper.h  meson.build  minunit.h  test_OR.c  test_compare_matlab_and_c.c  test_example.c  test_meas_data.c  test_meas_data.h  test_optimal_request_on_data.c  test_test.c
