# About: Project root Meson build configuration.
# Author: Ivan Vnucec
# License WTFPL – Do What the Fuck You Want to Public License. See LICENSE.md file for more information.

# Build matrix_math
args = [
    '-DMTX_MATRIX_CHECK_PTRS',  # Check for NULL ptrs option
    '-DMTX_MATRIX_CHECK_DIMS'   # Check matrix dimensions option
]
subdir('matrix_math/src/matrix_math')
