# About: Meson build configuration for source directory.
# Author: Ivan Vnucec
# License WTFPL – Do What the Fuck You Want to Public License. See LICENSE.md file for more information.

cc = meson.get_compiler('c')

srcs = ['request.c', 'request.h']

project_exe = executable('project_exe', sources: srcs)
